Melhoria em uso de variáveis